# chat-db

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
backend/: .env.example  main.py  requirements.txt
backend/api/: __init__.py  chat.py  knowledge_base.py  request_schemas.py
backend/app/api/: chat.py  db.py
backend/cache/: __init__.py  chat_session_cache.py  redis.py
backend/chat/: __init__.py  base_handler.py
backend/chat/mysql/: handler.py
backend/chat_handler/: __init__.py  base_handler.py  prompts.py
backend/chat_handler/mysql/: __init__.py  handler.py  mysql_handler.py
backend/data_types/: __init__.py
backend/db_client/: __init__.py  base_client.py  mysql_client.py
backend/embedding_models/: __init__.py  base_embedding_model.py  sentence_transformer.py
backend/knowledge_base/: add_to_vector_store.py
backend/knowledge_base/mysql/: question_sql_pairs.json
backend/llm/: __init__.py  base_client.py  gemini_client.py  openai_client.py
backend/logger/: __init__.py  logger.py  logging.py
backend/prompt/: __init__.py  base_handler.py
backend/prompt/mysql/: handler.py
backend/vector_store/: __init__.py  base_handler.py
backend/vector_store/tidb/: __init__.py  handler.py  models.py  tidb_handler.py  utils.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/chatList/: ChatList.jsx  chatList.css
nginx/: nginx.conf
supervisor/: supervisord.conf
(+16 files in other folders)
